B-F Backup Sandbox 30.4.12/src/objects/Artist__c.object
<CustomObject>
    <description>FDC-Art Collection Database
Created by: Isaac Lehr 10/25/2010 for FDC Art Collection</description>
    <fields>
        <fullName>Bio__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Artist&apos;s biography</inlineHelpText>
        <label>Bio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>First name of artist</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>IF( First_Name__c=&quot;&quot;,Last_Name__c ,Last_Name__c  &amp; &quot;, &quot; &amp; First_Name__c )</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>FDC-Art Collection Database</description>
        <inlineHelpText>Last name of artist</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Artist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>